# stories-text-transmutation

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
assets/: index-135b20f3.css  index-1bc75e85.js  index-3bb25bcf.js  index-5c5c1797.js  index-9d7a16e0.css  index-ae581b15.js  index-e14ac3ce.css  modelWorker-dd793cb1.js  modelWorker-e06a7d88.js
public/data/: example.csv
rust/: Cargo.toml
rust/src/: lib.rs
src/: App.vue  mlmodel.ts  modelWorker.ts
src/components/: Transmutation.vue
src/old/: bertWorker.js  llmcommon.ts  wasm_test.html
transmutation-rs/: Cargo.toml  build-lib.sh
transmutation-rs/src/: lib.rs
