[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["jovyan"]
edition = "2018"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
log = "0.4"
num-traits = "0.2.15"
rand = "0.8.5"
safetensors = "0.3.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.13.4", features = ["unstable_wasm"], default-features = false}

candle = { git = "https://github.com/huggingface/candle.git", branch = "main", version = "0.3.2", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", version = "0.3.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", version = "0.3.2" }

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
reqwest = "0.11.18"
wasm-bindgen-futures = "0.4.39"

